# reference-node-and-rust

./: .gitignore  README.md
child_process/: Cargo.toml
child_process/src/: main.rs
child_process/src/node_adapter/: node_instance.rs  node_worker.rs  spawn.rs
child_process/src/node_adapter/js/: mod.rs
child_process/src/node_adapter/js/assets/: main.js  worker.js
child_process/src/plugins/node_proxy/: mod.rs  resolver.rs
child_process/src/public/: mod.rs  resolver.rs
child_process_async/: Cargo.toml
child_process_async/src/: main.rs
child_process_async/src/node_adapter/: mod.rs  node_instance.rs  node_worker.rs  spawn.rs
child_process_async/src/node_adapter/js/: mod.rs
child_process_async/src/node_adapter/js/assets/: main.js  worker.js
child_process_async/src/plugins/: mod.rs
child_process_async/src/plugins/default_resolver/: mod.rs
child_process_async/src/plugins/node_proxy/: resolver.rs
child_process_async/src/public/: resolver.rs
napi/: Cargo.toml  package.json
napi/lib/: index.js  worker.js
napi/src/: lib.rs  register_main.rs  register_worker.rs
napi/src/plugins/default_resolver/: mod.rs
napi/src/plugins/node_proxy/: resolver.rs
napi/src/worker_farm/: mod.rs  requests.rs  worker_farm.rs
plugin/: index.js  package.json
