[package]
name = "addon"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "promise-api"]
